examples/test/testpolicy8078.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8078
  namespace: namespace420
spec:
  podSelector:
    matchLabels:
      key16: value6
      key42: value32
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key2: value34
          key8: value21
      podSelector:
        matchLabels:
          key18: value13
          key20: value17
          key42: value44
